@@ -30,7 +30,9 @@ import com.google.common.collect.Lists;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
+import org.mockito.Mockito;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
@@ -75,7 +77,8 @@ public class ZFileNotificationTest {
 
         @Nullable
         @Override
-        public IOExceptionRunnable added(@NonNull StoredEntry entry, @Nullable StoredEntry replaced) {
+        public IOExceptionRunnable added(@NonNull StoredEntry entry,
+                @Nullable StoredEntry replaced) {
             added.add(Pair.of(entry, replaced));
             return returnRunnable;
         }
@@ -111,86 +114,88 @@ public class ZFileNotificationTest {
 
     @Test
     public void notifyAddFile() throws Exception {
-        ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
-        KeepListener kl = new KeepListener();
-        zf.addZFileExtension(kl);
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
+            KeepListener kl = new KeepListener();
+            zf.addZFileExtension(kl);
 
-        kl.assertClear();
+            kl.assertClear();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
-        assertEquals(1, kl.added.size());
-        StoredEntry addedSe = kl.added.get(0).getFirst();
-        assertNull(kl.added.get(0).getSecond());
-        kl.added.clear();
-        kl.assertClear();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+            assertEquals(1, kl.added.size());
+            StoredEntry addedSe = kl.added.get(0).getFirst();
+            assertNull(kl.added.get(0).getSecond());
+            kl.added.clear();
+            kl.assertClear();
 
-        StoredEntry foo = zf.get("foo");
-        assertNotNull(foo);
+            StoredEntry foo = zf.get("foo");
+            assertNotNull(foo);
 
-        assertSame(foo, addedSe);
-
-        zf.close();
+            assertSame(foo, addedSe);
+        }
     }
 
     @Test
     public void notifyRemoveFile() throws Exception {
-        ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
-        KeepListener kl = new KeepListener();
-        zf.addZFileExtension(kl);
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
+            KeepListener kl = new KeepListener();
+            zf.addZFileExtension(kl);
 
-        kl.assertClear();
+            kl.assertClear();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
-        kl.reset();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+            kl.reset();
 
-        StoredEntry foo = zf.get("foo");
-        assertNotNull(foo);
+            StoredEntry foo = zf.get("foo");
+            assertNotNull(foo);
 
-        foo.delete();
-        assertEquals(1, kl.removed.size());
-        assertSame(foo, kl.removed.get(0));
-        kl.removed.clear();
-        kl.assertClear();
-
-        zf.close();
+            foo.delete();
+            assertEquals(1, kl.removed.size());
+            assertSame(foo, kl.removed.get(0));
+            kl.removed.clear();
+            kl.assertClear();
+        }
     }
 
     @Test
     public void notifyUpdateFile() throws Exception {
-        ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
-        KeepListener kl = new KeepListener();
-        zf.addZFileExtension(kl);
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
+            KeepListener kl = new KeepListener();
+            zf.addZFileExtension(kl);
 
-        kl.assertClear();
+            kl.assertClear();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
-        StoredEntry foo1 = zf.get("foo");
-        kl.reset();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+            StoredEntry foo1 = zf.get("foo");
+            kl.reset();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 2, 3 }), CompressionMethod.DEFLATE);
-        StoredEntry foo2 = zf.get("foo");
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 2, 3 }));
+            zf.finishAllBackgroundTasks();
+            StoredEntry foo2 = zf.get("foo");
 
-        assertEquals(1, kl.added.size());
-        assertSame(foo2, kl.added.get(0).getFirst());
-        assertSame(foo1, kl.added.get(0).getSecond());
+            assertEquals(1, kl.added.size());
+            assertSame(foo2, kl.added.get(0).getFirst());
+            assertSame(foo1, kl.added.get(0).getSecond());
 
-        kl.added.clear();
-        kl.assertClear();
-
-        zf.close();
+            kl.added.clear();
+            kl.assertClear();
+        }
     }
 
     @Test
     public void notifyOpenUpdateClose() throws Exception {
-        ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
         KeepListener kl = new KeepListener();
-        zf.addZFileExtension(kl);
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
+            zf.addZFileExtension(kl);
 
-        kl.assertClear();
+            kl.assertClear();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
-        kl.reset();
-        zf.close();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+            kl.reset();
+        }
 
         assertEquals(1, kl.open);
         kl.open = 0;
@@ -205,136 +210,213 @@ public class ZFileNotificationTest {
 
     @Test
     public void notifyOpenUpdate() throws Exception {
-        ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
         KeepListener kl = new KeepListener();
-        zf.addZFileExtension(kl);
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
+            zf.addZFileExtension(kl);
 
-        kl.assertClear();
+            kl.assertClear();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
-        kl.reset();
-        zf.update();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+            kl.reset();
+            zf.update();
 
-        assertEquals(1, kl.open);
-        kl.open = 0;
-        assertEquals(1, kl.beforeUpdated);
-        assertEquals(1, kl.updated);
-        kl.beforeUpdated = 0;
-        kl.updated = 0;
-        kl.assertClear();
-
-        zf.close();
+            assertEquals(1, kl.open);
+            kl.open = 0;
+            assertEquals(1, kl.beforeUpdated);
+            assertEquals(1, kl.updated);
+            kl.beforeUpdated = 0;
+            kl.updated = 0;
+            kl.assertClear();
+        }
     }
 
     @Test
     public void notifyUpdate() throws Exception {
-        ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
-        KeepListener kl = new KeepListener();
-        zf.addZFileExtension(kl);
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
+            KeepListener kl = new KeepListener();
+            zf.addZFileExtension(kl);
 
-        kl.assertClear();
+            kl.assertClear();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
-        zf.update();
-        kl.reset();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.update();
+            kl.reset();
 
-        zf.add("bar", new ByteArrayEntrySource(new byte[] { 2, 3 }), CompressionMethod.DEFLATE);
-        kl.reset();
+            zf.add("bar", new ByteArrayInputStream(new byte[] { 2, 3 }));
+            zf.finishAllBackgroundTasks();
+            kl.reset();
 
-        zf.update();
-        assertEquals(1, kl.beforeUpdated);
-        assertEquals(1, kl.updated);
-        kl.beforeUpdated = 0;
-        kl.updated = 0;
-        kl.assertClear();
-
-        zf.close();
+            zf.update();
+            assertEquals(1, kl.beforeUpdated);
+            assertEquals(1, kl.updated);
+            kl.beforeUpdated = 0;
+            kl.updated = 0;
+            kl.assertClear();
+        }
     }
 
     @Test
     public void removedListenersAreNotNotified() throws Exception {
-        ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
-        KeepListener kl = new KeepListener();
-        zf.addZFileExtension(kl);
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
+            KeepListener kl = new KeepListener();
+            zf.addZFileExtension(kl);
 
-        kl.assertClear();
+            kl.assertClear();
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
-        assertEquals(1, kl.added.size());
-        kl.added.clear();
-        kl.assertClear();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+            assertEquals(1, kl.added.size());
+            kl.added.clear();
+            kl.assertClear();
 
-        zf.removeZFileExtension(kl);
+            zf.removeZFileExtension(kl);
 
-        zf.add("foo", new ByteArrayEntrySource(new byte[] { 2, 3 }), CompressionMethod.DEFLATE);
-        kl.assertClear();
-
-        zf.close();
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 2, 3 }));
+            zf.finishAllBackgroundTasks();
+            kl.assertClear();
+        }
     }
 
     @Test
     public void actionsExecutedAtEndOfNotification() throws Exception {
-        final ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"));
+        try (ZFile zf = new ZFile(new File(mTemporaryFolder.getRoot(), "a.zip"))) {
 
-        final IOException death[] = new IOException[1];
+            IOException death[] = new IOException[1];
 
-        final KeepListener kl1 = new KeepListener();
-        zf.addZFileExtension(kl1);
-        kl1.returnRunnable = new IOExceptionRunnable() {
-            private boolean once = false;
+            KeepListener kl1 = new KeepListener();
+            zf.addZFileExtension(kl1);
+            kl1.returnRunnable = new IOExceptionRunnable() {
+                private boolean once = false;
 
-            @Override
-            public void run() {
-                if (once) {
-                    return;
+                @Override
+                public void run() {
+                    if (once) {
+                        return;
+                    }
+
+                    once = true;
+
+                    try {
+                        zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+                    } catch (IOException e) {
+                        death[0] = e;
+                    }
                 }
+            };
 
-                once = true;
+            KeepListener kl2 = new KeepListener();
+            zf.addZFileExtension(kl2);
+            kl2.returnRunnable = new IOExceptionRunnable() {
+                private boolean once = false;
 
-                try {
-                    zf.add("foo", new ByteArrayEntrySource(new byte[] { 1, 2 }),
-                            CompressionMethod.DEFLATE);
-                } catch (IOException e ) {
-                    death[0] = e;
+                @Override
+                public void run() {
+                    if (once) {
+                        return;
+                    }
+
+                    once = true;
+                    try {
+                        zf.add("bar", new ByteArrayInputStream(new byte[] { 1, 2 }));
+                    } catch (IOException e) {
+                        death[0] = e;
+                    }
                 }
-            }
-        };
+            };
 
-        final KeepListener kl2 = new KeepListener();
-        zf.addZFileExtension(kl2);
-        kl2.returnRunnable = new IOExceptionRunnable() {
-            private boolean once = false;
+            kl1.assertClear();
+            kl2.assertClear();
 
-            @Override
-            public void run() {
-                if (once) {
-                    return;
+            zf.add("xpto", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+
+            assertEquals(3, kl1.added.size());
+            kl1.added.clear();
+            kl1.assertClear();
+            assertEquals(3, kl2.added.size());
+            kl2.added.clear();
+            kl2.assertClear();
+
+            assertNull(death[0]);
+        }
+    }
+
+    @Test
+    public void canAddFilesDuringUpdateNotification() throws Exception {
+        File zipFile = new File(mTemporaryFolder.getRoot(), "a.zip");
+        try (ZFile zf = new ZFile(zipFile)) {
+            IOException death[] = new IOException[1];
+
+            KeepListener kl1 = new KeepListener();
+            zf.addZFileExtension(kl1);
+
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+
+            kl1.returnRunnable = new IOExceptionRunnable() {
+                private boolean once = false;
+
+                @Override
+                public void run() {
+                    if (once) {
+                        return;
+                    }
+
+                    once = true;
+
+                    try {
+                        zf.add("bar", new ByteArrayInputStream(new byte[] { 1, 2 }));
+                    } catch (IOException e) {
+                        death[0] = e;
+                    }
                 }
+            };
+        }
 
-                once = true;
-                try {
-                    zf.add("bar", new ByteArrayEntrySource(new byte[] { 1, 2 }),
-                            CompressionMethod.DEFLATE);
-                } catch (IOException e ) {
-                    death[0] = e;
-                }
-            }
-        };
+        try (ZFile zf2 = new ZFile(zipFile)) {
+            StoredEntry fooFile = zf2.get("foo");
+            assertNotNull(fooFile);
+            StoredEntry barFile = zf2.get("bar");
+            assertNotNull(barFile);
+        }
+    }
 
-        kl1.assertClear();
-        kl2.assertClear();
+    @Test
+    public void notifyOnceEntriesWritten() throws Exception {
+        File zipFile = new File(mTemporaryFolder.getRoot(), "a.zip");
+        ZFileExtension ext = Mockito.mock(ZFileExtension.class);
+        try (ZFile zf = new ZFile(zipFile)) {
+            zf.addZFileExtension(ext);
 
-        zf.add("xpto", new ByteArrayEntrySource(new byte[] { 1, 2 }), CompressionMethod.DEFLATE);
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
 
-        assertEquals(3, kl1.added.size());
-        kl1.added.clear();
-        kl1.assertClear();
-        assertEquals(3, kl2.added.size());
-        kl2.added.clear();
-        kl2.assertClear();
+            Mockito.verify(ext, Mockito.times(0)).entriesWritten();
+        }
 
-        assertNull(death[0]);
+        Mockito.verify(ext, Mockito.times(1)).entriesWritten();
+    }
 
-        zf.close();
+    @Test
+    public void notifyTwiceEntriesWrittenIfCdChanged() throws Exception {
+        File zipFile = new File(mTemporaryFolder.getRoot(), "a.zip");
+        ZFileExtension ext = Mockito.mock(ZFileExtension.class);
+        try (ZFile zf = new ZFile(zipFile)) {
+            Mockito.doAnswer((invocation) -> {
+                zf.setExtraDirectoryOffset(10);
+                Mockito.doNothing().when(ext).entriesWritten();
+                return null;
+            }).when(ext).entriesWritten();
+
+            zf.addZFileExtension(ext);
+
+            zf.add("foo", new ByteArrayInputStream(new byte[] { 1, 2 }));
+            zf.finishAllBackgroundTasks();
+
+            Mockito.verify(ext, Mockito.times(0)).entriesWritten();
+        }
+
+        Mockito.verify(ext, Mockito.times(2)).entriesWritten();
     }
 }
